<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_verbindungen"
            android:title="@string/menu_verbindung" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_abfahrten"
            android:title="@string/menu_abfahrten" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_liniennetz"
            android:title="@string/menu_liniennetzplan" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_karte"
            android:title="@string/menu_karte" />
    </group>


</menu>
