<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="wada1028.info3.oepnv_navigator.ui.home.HomeFragment"
        android:label="@string/menu_verbindung"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="wada1028.info3.oepnv_navigator.ui.gallery.GalleryFragment"
        android:label="Impressum"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="wada1028.info3.oepnv_navigator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_liniennetzplan"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="wada1028.info3.oepnv_navigator.ui.tools.ToolsFragment"
        android:label="@string/menu_karte"
        tools:layout="@layout/fragment_tools" />

</navigation>